--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" />
+                <img class="masthead-avatar mb-5" src="https://e1.pngegg.com/pngimages/157/31/png-clipart-league-of-legends-free-icon-lol-icon-blue-1.png" alt="" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Eloboost en league of legends</h1>
                 <!-- Icon Divider-->
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0">Top - Mid - Adc</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="" />
+                            <img class="img-fluid" src="https://i.pinimg.com/originals/75/61/5a/75615a37309f44c6f07353277429a4f2.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
