--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Acerca de</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -134,8 +134,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Para quienes no están en el ambiente del League of Legends, el Elo Boosting es una practica mediante la cual un jugador que no es el dueño de una cuenta juega en la misma para mejorar el nivel y la división del jugador, que vendría a ser el nivel de habilidad en el juego (MMR).</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">Elo boosting es la practica donde un jugador utiliza una cuenta que no registro y que no creo desde nivel 1 y la lleva a clasificatorias. (No importa si ganas o pierdes, es considerado Elo Boost).</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -150,7 +150,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contáctame!</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -204,11 +204,11 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">Integrantes</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            Matias Ceballos
                             <br />
-                            Clark, MO 65243
+                            Ignacio Torres
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -221,9 +221,9 @@
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
+                        <h4 class="text-uppercase mb-4">Acerca de nosotros</h4>
                         <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
+                            Estudiantes de Ingeniería Civil Informática, usando
                             <a href="http://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
