--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fubuntuhandbook.org%2Findex.php%2Ftag%2Finstall-lol-in-ubuntu%2F&psig=AOvVaw3EKAV81BxQQeQmv_pxZ6lD&ust=1619576683019000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMCa9tWvnfACFQAAAAAdAAAAABAD" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
